--- a/src/app/indexer/changelog/changelog.component.html
+++ b/src/app/indexer/changelog/changelog.component.html
@@ -22,10 +22,19 @@
 				<br/>
 				<br/>
 
-				<h4>v3.7.1 11-02-2020 &nbsp; &nbsp; <span class="badge badge-secondary">Latest version</span></h4>
+				<h4>v3.8.0 22-02-2020 &nbsp; &nbsp; <span class="label label-default">Latest version</span></h4>
+				<p>- The actual indexer script is now loaded dynamically, allowing for faster development iterations and no more 'update available' spam</p>
+				<p>- When sharing a report, the report is now always uploaded in order to increase sharing reliability master</p>
+				<a href="https://github.com/GrepoDataTools/grepodata-backend/commit/960b5ddfbba9fae482b322ce224c0ca72cbf5f53#diff-efe31ecbd0dfeba267ed288538be83c0" target="_blank">
+					<i class="fa fa-github" aria-hidden="true"></i> View changes on github.com
+				</a>
+
+				<hr/>
+
+				<h4>v3.7.1 11-02-2020</h4>
 				<p>- Improved report sharing security (hide index key when sharing an undefined index)</p>
 				<a href="https://github.com/GrepoDataTools/grepodata-backend/commit/0cb34a8fd25829786d4192235aae7d63d6002349#diff-efe31ecbd0dfeba267ed288538be83c0" target="_blank">
-					<fa-icon [icon]="gitIcon"></fa-icon> View changes on github.com
+					<i class="fa fa-github" aria-hidden="true"></i> View changes on github.com
 				</a>
 
 				<hr/>
