--- a/src/app/indexer/faq/faq.component.html
+++ b/src/app/indexer/faq/faq.component.html
@@ -115,6 +115,6 @@
 <div class="alert alert-gd-1">
 	<h2 class="gd-primary">Update history</h2>
 	<div class="faq-content">
-		<a routerLink="/changelog" style="text-decoration: underline;">Changelog</a>
+		<a routerLink="/indexer/changelog" style="text-decoration: underline;">Changelog</a>
 	</div>
 </div>
