--- a/src/app/indexer/index-home/index-home.component.html
+++ b/src/app/indexer/index-home/index-home.component.html
@@ -14,11 +14,11 @@
 					<!--suppress XmlDuplicatedId -->
 					<div class="row" id="timeline">
 						<div class="col-12 col-sm-3 col-md-3 col-lg-3 text-left" style="padding: 0px;">
-							<!--<div class="col-12 col-sm-12">-->
-							<!--<button mat-button class="mat-raised-button bg-gd-2" style="z-index: 999; width: 100%; overflow: hidden; text-overflow: ellipsis;" routerLink="/auth/profile">-->
-							<!--<i class="fa fa-arrow-left"></i>&nbsp;My account-->
-							<!--</button>-->
-							<!--</div>-->
+							<div class="col-12 col-lg-9">
+								<button mat-button class="mat-raised-button bg-gd-2" style="z-index: 999; width: 100%; overflow: hidden; text-overflow: ellipsis;" routerLink="/auth/profile">
+									<i class="fa fa-arrow-left"></i>&nbsp;My account
+								</button>
+							</div>
 							<div class="col-12 col-lg-9">
 								<button mat-button class="mat-raised-button bg-gd-2" style="z-index: 999; width: 100%; overflow: hidden; text-overflow: ellipsis;" routerLink="/indexer/0">
 									<i class="fa fa-arrow-left"></i>&nbsp;<span class="d-inline d-sm-none d-lg-inline">{{'indexer.homeLong' | translate}}</span><span class="d-none d-sm-inline d-lg-none">{{'indexer.home' | translate}}</span>
@@ -441,7 +441,7 @@
 
 				<!--<div *ngIf="data.total_reports != 0" class="col-12 alert alert-gd-1 text-center">-->
 				<!--<h3>-->
-				<!--This tool is still in development. Some features may be offline at times. If you have any questions or remarks, please <a class="a-link-dialog" (click)="showContactDialog()">contact</a> us. [<a routerLink="/changelog" style="text-decoration: underline;">Changelog</a>]-->
+				<!--This tool is still in development. Some features may be offline at times. If you have any questions or remarks, please <a class="a-link-dialog" (click)="showContactDialog()">contact</a> us. [<a routerLink="/indexer/changelog" style="text-decoration: underline;">Changelog</a>]-->
 				<!--</h3>-->
 				<!--</div>-->
 
