--- a/src/styles.scss
+++ b/src/styles.scss
@@ -592,7 +592,7 @@ mat-option {
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
     color: #365063;
-    background-color: #fbfbfb;;
+    background-color: #fbfbfb;
     border-color: #365063;
 }
 .btn-primary:active,
@@ -619,6 +619,49 @@ fieldset[disabled] .btn-primary.active {
     border-color: #2C3E50;
 }
 .btn-primary .badge {
+    color: #2C3E50;
+    background-color: white;
+}
+
+.btn-secondary {
+    color: #365063;
+    background-color: #fbfbfb;
+    border-color: #365063;
+    font-weight: 700;
+}
+.btn-secondary:hover,
+.btn-secondary:focus,
+.btn-secondary:active,
+.btn-secondary.active,
+.open .dropdown-toggle.btn-secondary {
+    background-color: #2C3E50;
+    border-color: #2C3E50;
+}
+.btn-secondary:active,
+.btn-secondary.active,
+.open .dropdown-toggle.btn-secondary {
+    background-image: none;
+}
+.btn-secondary.disabled,
+.btn-secondary[disabled],
+fieldset[disabled] .btn-secondary,
+.btn-secondary.disabled:hover,
+.btn-secondary[disabled]:hover,
+fieldset[disabled] .btn-secondary:hover,
+.btn-secondary.disabled:focus,
+.btn-secondary[disabled]:focus,
+fieldset[disabled] .btn-secondary:focus,
+.btn-secondary.disabled:active,
+.btn-secondary[disabled]:active,
+fieldset[disabled] .btn-secondary:active,
+.btn-secondary.disabled.active,
+.btn-secondary[disabled].active,
+fieldset[disabled] .btn-secondary.active {
+    color: #365063;
+    background-color: #fbfbfb;
+    border-color: #365063;
+}
+.btn-secondary .badge {
     color: #2C3E50;
     background-color: white;
 }
@@ -741,9 +784,9 @@ mat-paginator {
 }
 .gd-spinner {
     position: absolute;
-    width: 30px;
-    height: 30px;
-    top: 50%;
+    width: 70px;
+    height: 0;
+    top: 35px;
     left: 50%;
     -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
