--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -4,10 +4,9 @@
 		<div class="{{(embedded==true?'col-12':'col-12 col-sm-10 offset-sm-1 col-md-8 offset-md-2 col-lg-4 offset-lg-4')}}">
 
 			<div *ngIf="embedded">
-				<p class="gd-secondary">
-					<strong>You need to be logged in to edit these settings.</strong>
-					Please register for a new account with the same email address if you created this index previously.
-				</p>
+				<div class="alert alert-warning">
+					<strong><mat-icon style="vertical-align: text-top;">new_releases</mat-icon> Login required.</strong> You need to be logged in to execute this action.
+				</div>
 			</div>
 
 			<div class="alert alert-gd-1" style="margin: 0 0 15px 0;">
@@ -30,12 +29,17 @@
 							</div>
 						</div>
 						<div class="form-group">
-							<button [disabled]="loading" class="btn btn-primary">
+							<button [disabled]="loading" class="btn btn-primary mr-1">
 								<span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
 								Login
 							</button>
-							<a routerLink="/auth/register" class="btn btn-link">Register</a>
-							<a routerLink="/auth/forgot" class="btn btn-link" style="float: right;">Password reset</a>
+							<!--<a routerLink="/auth/register" class="btn btn-link">Register</a>-->
+							<button [disabled]="loading" type="button" routerLink="/auth/register" class="btn btn-secondary">
+								Register <mat-icon style="opacity: 1; vertical-align: bottom;">launch</mat-icon>
+							</button>
+							<button [disabled]="loading" type="button" routerLink="/auth/forgot" class="btn btn-link" style="float: right;">
+								Password reset <mat-icon style="opacity: 1; vertical-align: bottom;">launch</mat-icon>
+							</button>
 						</div>
 
 						<p class="invalid-feedback" *ngIf="error!=''" style="color: #a94442 !important;">{{error}}</p>
