--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -12,10 +12,15 @@
 
 				<div>
 					<h2>Register</h2>
-					<form *ngIf="!success" [formGroup]="loginForm" (ngSubmit)="environment.production==true?captchaRef.execute():sendRequest()">
+					<div class="alert alert-info">
+						<strong><mat-icon style="vertical-align: text-top;">new_releases</mat-icon> GrepoData now uses account authentication to manage your indexes.</strong>
+						If you previously created an index and want to manage it, create an account with the same email address as was used to create the old index.
+						Your new account will be linked to your old indexes.
+					</div>
+					<form autocomplete="off" *ngIf="!success" [formGroup]="loginForm" (ngSubmit)="environment.production==true?captchaRef.execute():sendRequest()">
 						<div class="form-group">
 							<label for="mail">Email Address</label>
-							<input type="text" formControlName="mail" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.mail.errors }" />
+							<input autocomplete="email" type="text" formControlName="mail" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.mail.errors }" />
 							<div *ngIf="submitted && f.mail.errors" class="invalid-feedback">
 								<div *ngIf="f.mail.errors.required">Email address is required</div>
 							</div>
@@ -34,24 +39,28 @@
 								<div *ngIf="f.password2.errors.required">Password verification is required</div>
 							</div>
 						</div>
-						<div class="form-check" style="display: flex;">
-							<input type="checkbox" class="form-check-input" id="exampleCheck1" formControlName="privacy">
-							<label for="privacy">&nbsp;&nbsp;By submitting this form you agree with our <a routerLink="/privacy">Privacy Policy</a></label>
+						<div class="form-check ml-1">
+							<input class="form-check-input" type="checkbox" id="privacy" formControlName="privacy" style="width: 17px; height: 17px;">
+							<label class="form-check-label" for="privacy">&nbsp;&nbsp;By submitting this form you agree with our <a routerLink="/privacy">Privacy Policy</a></label>
 						</div>
 						<div *ngIf="submitted && f.privacy.errors" class="invalid-feedback">
 							<div *ngIf="f.privacy.errors.required">Accept our privacy policy to continue</div>
 						</div>
 						<br/>
 						<div class="form-group">
-							<button [disabled]="loading" class="btn btn-primary">
+							<button [disabled]="loading" class="btn btn-primary mr-1">
 								<span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
 								Register
 							</button>
-							<a routerLink="/auth/login" class="btn btn-link">login with existing account</a>
+							<button [disabled]="loading" type="button" routerLink="/auth/login" class="btn btn-secondary" style="float: right;">
+								Login with existing account <mat-icon style="opacity: 1; vertical-align: bottom;">launch</mat-icon>
+							</button>
 						</div>
 
-						<p class="invalid-feedback" *ngIf="error!=''" style="color: #a94442 !important;">{{error}}</p>
+						<p *ngIf="error!=''" style="color: #a94442 !important;">{{error}}</p>
+
 					</form>
+
 
 					<div *ngIf="success">
 						<p><strong>Login successful!</strong> Redirecting..</p>
