--- a/src/app/auth/profile/profile.component.scss
+++ b/src/app/auth/profile/profile.component.scss
@@ -11,3 +11,38 @@
         width: 100%;
     }
 }
+.index-list {
+
+}
+.index-list-entry {
+    border-bottom: 1px dashed #9da3a6;
+    padding: 5px;
+
+    .info {
+    }
+    .count {
+    }
+    .dates {
+    }
+    .actions {
+        button {
+            color: #d1d1d1 !important;
+            font-size: 40px !important;
+            float: right;
+        }
+    }
+
+    .label {
+        font-weight: 700;
+        font-size: 16px;
+    }
+    .number {
+        font-size: 14px;
+    }
+}
+.index-list-entry:hover {
+    border-left: 5px solid #18bc9b;
+    background: #f0f0f0;
+    cursor: pointer;
+    transform: scale(1.05);
+}
