--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -12,10 +12,13 @@
 
 				<div>
 					<h2>Register</h2>
-					<div class="alert alert-info">
+					<div *ngIf="error==''" class="alert alert-info">
 						<strong><mat-icon style="vertical-align: text-top;">new_releases</mat-icon> GrepoData now uses account authentication to manage your indexes.</strong>
 						If you previously created an index and want to manage it, create an account with the same email address as was used to create the old index.
 						Your new account will be linked to your old indexes.
+					</div>
+					<div *ngIf="error!=''" class="alert alert-danger">
+						{{error}}
 					</div>
 					<form autocomplete="off" *ngIf="!success" [formGroup]="loginForm" (ngSubmit)="environment.production==true?captchaRef.execute():sendRequest()">
 						<div class="form-group">
@@ -43,7 +46,7 @@
 							<input class="form-check-input" type="checkbox" id="privacy" formControlName="privacy" style="width: 17px; height: 17px;">
 							<label class="form-check-label" for="privacy">&nbsp;&nbsp;By submitting this form you agree with our <a routerLink="/privacy">Privacy Policy</a></label>
 						</div>
-						<div *ngIf="submitted && f.privacy.errors" class="invalid-feedback">
+						<div *ngIf="submitted && f.privacy.errors" style="color: #a94442 !important;">
 							<div *ngIf="f.privacy.errors.required">Accept our privacy policy to continue</div>
 						</div>
 						<br/>
@@ -56,8 +59,6 @@
 								Login with existing account <mat-icon style="opacity: 1; vertical-align: bottom;">launch</mat-icon>
 							</button>
 						</div>
-
-						<p *ngIf="error!=''" style="color: #a94442 !important;">{{error}}</p>
 
 					</form>
 
