--- a/src/app/indexer/about/about.component.html
+++ b/src/app/indexer/about/about.component.html
@@ -56,7 +56,7 @@
 											<button type="submit" class="gd-btn-1" style="position: absolute; bottom: 40px; height: 45px; overflow: hidden; text-overflow: ellipsis; border-radius: 5px;">
 												Load existing index &nbsp; <i class="fa fa-arrow-circle-right"></i>
 											</button>
-											<button type="button" routerLink="/auth/profile" class="gd-btn-1" style="position: absolute; bottom: 40px; right: 40px; height: 45px; overflow: hidden; text-overflow: ellipsis; border-radius: 5px;">
+											<button type="button" (click)="openProfile()" class="gd-btn-1" style="position: absolute; bottom: 40px; right: 40px; height: 45px; overflow: hidden; text-overflow: ellipsis; border-radius: 5px;">
 												My indexes <mat-icon style="opacity: 1; vertical-align: bottom;">launch</mat-icon>
 											</button>
 										</div>
