--- a/src/app/changelog/changelog.component.html
+++ b/src/app/changelog/changelog.component.html
@@ -22,9 +22,26 @@
         <br/>
         <br/>
 
-        <h4>v3.8.0 22-02-2020 &nbsp; &nbsp; <span class="label label-default">Latest version</span></h4>
-	      <p>- The actual indexer script is now loaded dynamically, allowing for faster development iterations and no more 'update available' spam</p>
-	      <p>- When sharing a report, the report is now always uploaded in order to increase sharing reliability master</p>
+	      <h4>v3.9.1 15-04-2020 &nbsp; &nbsp; <span class="label label-default">Latest version</span></h4>
+	      <p>- Bugfix for keyboard shortcuts in inbox</p>
+	      <a href="https://github.com/GrepoDataTools/grepodata-backend/commit/34b538ccf9726da05c5ebc41f53cf8065f415c15#diff-efe31ecbd0dfeba267ed288538be83c0" target="_blank">
+		      <i class="fa fa-github" aria-hidden="true"></i> View changes on github.com
+	      </a>
+
+	      <hr/>
+
+	      <h4>v3.9.0 29-02-2020</h4>
+	      <p>- When viewing town intel with multiple indexer scripts installed, the intel from all installed indexes is now combined</p>
+	      <p>- Reverted back to old loading method</p>
+	      <a href="https://github.com/GrepoDataTools/grepodata-backend/commit/09b76f60a749401719921b2c4a6f181176644f48#diff-efe31ecbd0dfeba267ed288538be83c0" target="_blank">
+		      <i class="fa fa-github" aria-hidden="true"></i> View changes on github.com
+	      </a>
+
+	      <hr/>
+
+        <h4>v3.8.0 22-02-2020</h4>
+	      <p>- When sharing a report, the report is now always uploaded in order to increase sharing reliability</p>
+	      <p>- Changed script loading method</p>
         <a href="https://github.com/GrepoDataTools/grepodata-backend/commit/960b5ddfbba9fae482b322ce224c0ca72cbf5f53#diff-efe31ecbd0dfeba267ed288538be83c0" target="_blank">
           <i class="fa fa-github" aria-hidden="true"></i> View changes on github.com
         </a>
