--- a/src/app/discord/discord.component.html
+++ b/src/app/discord/discord.component.html
@@ -26,11 +26,11 @@
                     <h3>Scoreboard</h3>
                     <div class="row">
                         <div class="col-xs-5"><pre>!gd today</pre></div>
-                        <div class="col-xs-7">Shows today's scoreboard for the default server <br/>(alternatives: !gd now/points/score/scoreboard)</div>
+                        <div class="col-xs-7">Shows today's scoreboard for the default server</div>
                     </div>
                     <div class="row">
                         <div class="col-xs-5"><pre>!gd yesterday</pre></div>
-                        <div class="col-xs-7">Shows yesterday's scoreboard for the default server <br/>(alternatives: !gd yday/prev)</div>
+                        <div class="col-xs-7">Shows yesterday's scoreboard for the default server</div>
                     </div>
                     <div class="row">
                         <div class="col-xs-5"><pre>!gd today/yesterday [server]</pre></div>
@@ -64,10 +64,11 @@
                         <div class="col-xs-5"><pre>!gd setIndex [index_key]</pre></div>
                         <div class="col-xs-7">Set the active intelligence index key</div>
                     </div>
-                    <br/>
-                    <p>
-                        <strong>GrepoData Bot also listens to town BBcode.</strong><br/> E.g. posting '[town]143524[/town]' will show the town intel for town 143524.
-                    </p>
+
+                    <!--<br/>-->
+                    <!--<p>-->
+                        <!--<strong>GrepoData Bot also listens to town BBcode.</strong><br/> E.g. posting '[town]143524[/town]' will show the town intel for town 143524.-->
+                    <!--</p>-->
 
 
                     <br/>
