--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -41,15 +41,7 @@
 	<h2 class="gd-primary">Is it allowed?</h2>
 	<div class="faq-content">
 		<p>Our script does not automate any gameplay elements, and therefore is in compliance with the overall rules.</p>
-		<br/>
-		The script has official approval on the following servers:
-		<ul>
-			<li>
-				<mat-icon class="icon-margin"><div class="bg-flag flag-nl"></div></mat-icon>
-				<a href="https://wiki.nl.grepolis.com/wiki/Scripts">nl</a></li>
-		</ul>
-
-		<br/>Approval on other servers is <strong>pending since 2018</strong>. Unfortunately, Grepolis is currently not evaluating new scripts due to limitations on available developers. However, using our script will not get you banned. <a href="https://en.forum.grepolis.com/index.php?threads/grepodata-enemy-city-indexer-pending-approval.62245/#post-1057206" target="_blank">You can find more info about this here.</a>
+		<br/>Official approval is <strong>pending since 2018</strong>. Unfortunately, Grepolis is currently not evaluating new scripts due to limitations on available developers. However, using our script will not get you banned. <a href="https://en.forum.grepolis.com/index.php?threads/grepodata-enemy-city-indexer-pending-approval.62245/#post-1057206" target="_blank">You can find more info about this here.</a>
 	</div>
 </div>
 <div class="alert alert-gd-1">
